--- a/.babelrc
+++ b/.babelrc
@@ -1,4 +1,4 @@
 {
     "presets": ["env", "react"],
-    "plugins": ["transform-class-properties", "transform-react-jsx-source"]
+    "plugins": ["transform-class-properties", "transform-react-jsx-source", "transform-object-rest-spread"]
 }
