--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
         "precommit": "lint-staged",
         "copy": "cp public/data dist/data",
         "start": "webpack-dev-server  --open --config webpack.dev.js",
-        "build": "webpack --config webpack.prod.js"
+        "build": "npm run parse-all;webpack --config webpack.prod.js"
     },
     "author": "Praveen Singh",
     "license": "ISC",
@@ -41,8 +41,10 @@
         "husky": "^0.14.3",
         "lint-staged": "^7.1.3",
         "prettier": "^1.13.7",
+        "readline": "^1.3.0",
         "style-loader": "^0.21.0",
         "uglifyjs-webpack-plugin": "^1.2.5",
+        "uuid": "^3.3.2",
         "webpack": "^4.11.1",
         "webpack-cli": "^3.0.3",
         "webpack-dev-middleware": "^3.1.3",
