--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
         "react-dom": "^16.4.0"
     },
     "devDependencies": {
+        "babel-cli": "^6.26.0",
         "babel-core": "^6.26.3",
         "babel-eslint": "^8.2.3",
         "babel-loader": "^7.1.4",
