--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
         "precommit": "lint-staged",
         "copy": "cp public/data dist/data",
         "start": "webpack-dev-server  --open --config webpack.dev.js",
-        "build": "npm run parse-all;webpack --config webpack.prod.js"
+        "build": "webpack --config webpack.prod.js"
     },
     "author": "Praveen Singh",
     "license": "ISC",
